k8s-manifests/gateway-api/global_ext_gateway.yaml
kind: Gateway
apiVersion: gateway.networking.k8s.io/v1beta1
metadata:
  name: external-http
  annotations:
    networking.gke.io/certmap: gke-gateway-internal-certificate-map
spec:
  gatewayClassName: gke-l7-global-external-managed
  listeners:
  - name: http
    protocol: HTTP
    port: 80
  - name: https
    protocol: HTTPS
    port: 443
    # tls:
    #   mode: Terminate
    #   options:
    #     networking.gke.io/pre-shared-certs: gke-gateway-internal-certificate
